--- a/Paper.tex
+++ b/Paper.tex
@@ -13,22 +13,9 @@ Mechanisms}
 \maketitle
 
 \section{Abstract}
-Authentication is a fundamental aspect of security that can be viewed from two main perspectives:
-credentials and protocols. The credentials aspect is familiar to most of us through username and
-password, or OTPs used when accessing personal bank account or authenticating into services such
-as Google/Apple ID. While these discrete credentials, which rely on simply having or knowing
-something are widely used, there remains a largely unexplored space: continuous credentials.
-Continuous credentials appear in several applications such as biometric authentication (fingerprints,
-eigenface or iris) and SSO mechanisms that rely on behavioral or environmental signals like
-GPS location etc. These credentials are not evaluated in a discrete way. Rather, they are measured
-by a mechanism that determines whether there are enough similarities above a predetermined
-threshold between an input and a stored figure.
-These mechanisms introduce a spectrum of confidence instead of a strict yes or no decision.
-As achieving high security level based on one credential and satisfying the mechanism might be
-hard, we aim to study the integration of several continuous credentials. Our research will explore
-how multiple continuous credentials can be fused to form a robust authentication mechanism and
-determine an optimal mechanism, achieving high security level in wallet design for both digital and
-physical assets.
+Authentication is a fundamental aspect of security that can be viewed from two main perspectives: credentials and protocols. The credentials aspect is familiar to most of us through username and password, or OTPs used when accessing personal bank account or authenticating into services such as Google/Apple ID. While these discrete credentials, which rely on simply having or knowing something are widely used, there remains a largely unexplored space: continuous credentials.
+Continuous credentials appear in several applications such as biometric authentication (fingerprints, eigenface or iris) and SSO mechanisms that rely on behavioral or environmental signals like GPS location etc. These credentials are not evaluated in a discrete way. Rather, they are measured by a mechanism that determines whether there are enough similarities above a predetermined threshold between an input and a stored figure.
+These mechanisms introduce a spectrum of confidence instead of a strict yes or no decision. As achieving high security level based on one credential and satisfying the mechanism might be hard, we aim to study the integration of several continuous credentials. Our research will explore how multiple continuous credentials can be fused to form a robust authentication mechanism and determine an optimal mechanism, achieving high security level in wallet design for both digital and physical assets.
 \section{Related Work}
 Authentication is a fundamental aspect of security and can be viewed from two main perspectives: credentials and protocols~\cite{mouallem2024}.
 Our Focus is on the credentials aspect and particularly the integration of non-binary credentials, such as biometrics, into authentication protocols aiming to enhance security and usability.
